--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="shortcut icon" type="image/png" href="images/icon.png">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/popup.css">
 
         <title>Swift-TODO</title>
     </head>
@@ -29,7 +29,7 @@
             <div class="todo-container">
                 <div class="todo-header">
                     <form name="subForm">
-                        <input type="text" placeholder="Type something here..." id="txtTodo">
+                        <input type="text" placeholder="Type something here..." id="txtTodo" required>
                         <input type="submit" value="&plus;">
                     </form>
                 </div>
@@ -46,7 +46,7 @@
             </div>
         </main>
         
-        <script type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript" src="scripts/popup.js"></script>
     </body>
 </html>
 
